# advanced-care-planning

./: .env.example  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  livekit.yaml  ruff.toml  setup.ps1  setup.sh
.agents/: AGENTS.md
.github/: CODEOWNERS
.github/workflows/: ci.yml
agent/: .dockerignore  Dockerfile  __init__.py  acp_agent.py  acp_prompts.py  audio_recorder.py  email_sender.py  http_server.py  logging_config.py  main.py  preference_extractor.py  prompt.yaml  prompt_loader.py  pyproject.toml  requirements.txt  session_store.py
agent/tests/: conftest.py  test_preference_extractor.py  test_prompt_loader.py
docs/: architecture.md  australian_acp.md  configuration.md  deployment.md  development.md  marketing_launch.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: ConversationView.test.tsx  utils.test.ts
frontend/src/components/: AudioVisualizer.tsx  ConversationView.tsx  PreJoin.tsx  (+1 more)
helm/: Chart.yaml  values-cloud.yaml  values-local.yaml  values.yaml
helm/templates/: _helpers.tpl  agent-configmap.yaml  agent-deployment.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  livekit-configmap.yaml  livekit-service.yaml  livekit-statefulset.yaml  redis-deployment.yaml  secrets.yaml  token-server-deployment.yaml
scripts/: setup.ps1  setup.sh
token-server/: main.py  requirements.txt
(+5 files in other folders)
