[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acp-agent"
version = "1.0.0"
description = "Advanced Care Planning — Voice AI Agent"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "ACP Contributors" },
]
keywords = ["acp", "advanced-care-planning", "voice-ai", "livekit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "livekit-agents>=1.5.0",
    "livekit-plugins-openai>=1.5.0",
    "livekit-plugins-deepgram>=1.5.0",
    "livekit-plugins-silero>=1.5.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "redis[hiredis]>=5.0",
    "aiohttp>=3.9.0",
    "azure-communication-email>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.setuptools.packages.find]
include = ["agent*"]